# actixblog

./: .env  Cargo.toml
migrations/: 20230526031514_categories.sql  20230526031539_posts.sql  20230526054504_data.sql  20230529014318_update.sql  20230615041612_drop_users.sql  20230615041647_users_table.sql  20230714000253_posts.sql  20230714000359_categories.sql  20230714000429_categories_posts.sql  20230714000533_data.sql  20230714001057_users.sql
src/: main.rs  telemetry.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/controller/: admin_function.rs  category_controller.rs  common_controller.rs  homepage.rs  login.rs  mod.rs  pagination_controller.rs  post_controller.rs  posts_controller.rs  public.rs  public_controller.rs  secret_key.rs  single_post_controller.rs
src/controller/authentication/: login.rs  register.rs
src/login/: get.rs  login.html  mod.rs  post.rs  register.rs
src/model/: category_database.rs  database.rs  mod.rs  pagination_database.rs  pagination_logic.rs  post_database.rs  posts_database.rs  register_database.rs  single_post_database.rs  single_posts_database.rs
src/model/authentication/: login_database.rs  mod.rs  register_database.rs
templates/: admin.hbs  admin_categories_page.hbs  admin_single_post.hbs  all_categories.hbs  categories_public.hbs  category.hbs  category.html  index.css  index.hbs  login.css  login.hbs  message.hbs  message_display.hbs  new_category.hbs  new_post.hbs  pagination.hbs  pagination_page.hbs  public.hbs  register.hbs  single.hbs  update_category.hbs  update_post.hbs
