[package]
name = "actixblog"
version = "0.1.0"
edition = "2021"



[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
actix = "0.12"
actix-web = "4"
actix-files = "0.6.2"
handlebars = "3"
actix-identity = "0.5"
actix-session = { version = "0.7", features = [ "cookie-session" ] }
serde = "1.0"
anyhow = "1.0"
warp = "0.3"
serde_json = "1.0"
pagination = "0.3.0"
