[package]
name = "actixblog"
version = "0.1.0"
edition = "2021"



[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
actix = "0.12"
actix-web = "4"
actix-files = "0.6.2"
handlebars = "3"
actix-identity = "0.5"
#actix-session = { version = "0.7", features = [ "cookie-session" ] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
serde = "1.0"
anyhow = "1.0"
warp = "0.3"
serde_json = "1.0"
pagination = "0.3.0"
futures = "0.3"
actix-web-flash-messages = "0.4.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
log = "0.4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
thiserror = "1.0.24"
serde-aux = "4"
unicode-segmentation = "1.7.1"
rand = { version = "0.8", features=["std_rng"] }
base64 = "0.21.0"
argon2 = { version = "0.4", features = ["std"] }
validator = "0.16"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
actix-web-lab = "0.18"
uuid = { version = "1", features = ["v4", "serde"] }

