[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros" ] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
actix = "0.12"
actix-web = "4"
actix-files = "0.6.2"
handlebars = {version="4.3.7" , features=["dir_source"]}
actix-identity = "0.5"
actix-session = { version = "0.7", features = [ "cookie-session" ] }
askama = "0.11"
serde = "1.0"
anyhow = "1.0"
warp = "0.3"
futures = "0.3"
arrow2_convert = "0.4.2"
serde_json = "1.0.96"
secrecy = "0.8.0"
argon2 = "0.5.0"
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.6"
actix-http = "3.3.1"
magic-crypt ="3.1.9"
cargo-watch = "8.4.0"
typeof = "1.0.0"
thiserror = "1.0.40"
glob = "0.3.1"
env_logger = "0.10.0"
actix-web-lab = "0.19.1"
